# video_chatbot_v2

./: Backend_Frontend_Integration_Guide.md  Backend_Implementation_Report.md  FastAPI_Endpoints_Summary.md  Implementation_Report_Structure.md  Multi_variants output.txt  README.md  System_Architecture_Documentation.md  download.py  generated_prompt.txt  path.py  test.py  upload_video.py
backend/: .env-template  .gitignore  EvaluatorServiceV2.py  EvaluatorServiceV3.py  GETTING_STARTED.md  MultivideoV4.0_evaluation_results.json  README.md  Ragv3_PreQRAG_Temporal_only_results.json  VI_insights_tazzytfrfh.json  Video_download.py  calculate.py  evaluation_results_multidocs.json  evaluation_results_t_with_llm.json  generated_prompt.txt  main.py  nicole.json  nicole_3yp31lv50q.json  nicole_sm1zzt8081.json  nicole_tg2fy923h1.json  prompt_temporal_docsScope.txt  pyproject.toml  requirements.txt  utils.py
backend/brokerservice/: brokerService.py  repository.py  router.py  tempCodeRunnerFile.py
backend/chatservice/: chatservice.py  model.py  repository.py  router.py  utils.py
backend/src/videoLearnRAG/: Ragv3_PreQRAG_Temporal_only_results.json  __init__.py  evaluation_results_t.json  nicole.json  nicole_3qkbj4qznk.json  nicole_sm1zzt8081.json
backend/src/videoLearnRAG/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
backend/src/videoLearnRAG/brokerservice/: router.py  (+1 more)
backend/transcriptservice/: repository.py
backend/videoLearnRAG.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/videoindexerclient/: VideoIndexerClient.py  VideoService.py  model.py
(+37 files in other folders)
