[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videoLearnRAG"
version = "0.1.0"
description = "LLM-based Learning Companion and Co-Pilot for lecture videos with RAG pipeline enhancements"
authors = [{name = "Nicole Imatong", email = "nicole.imatong@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "pymongo>=4.11.1",
    "python-dotenv>=1.0.1",
    "openai>=1.62.0",
    "langchain-text-splitters>=0.3.6",
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.6",
    "ragas>=0.2.13",
    "azure-ai-vision-imageanalysis>=1.0.0",
    "azure-identity>=1.20.0",
    "ffmpeg-python>=0.2.0",
    "ffmpegcv>=0.3.16",
    "datasets>=3.3.1",
    "bcrypt>=4.3.0",
    "requests>=2.32.3",
    "schedule>=1.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950"
]

[project.scripts]
videoLearnRAG = "videoLearnRAG.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["videoLearnRAG*"]
